# odbcpp

odbcpp-1.6/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac  odbcpp.pc.in  run
odbcpp-1.6/doc/: Makefile.am  Makefile.in  odbcpp.doxy.in
odbcpp-1.6/include/: Makefile.am  Makefile.in
odbcpp-1.6/include/odbcpp/: connection.h  diagnostic.h  environment.h  exception.h  handle.h  object.h  odbcpp.h  odbcpp_config.h  record.h  statement.h
odbcpp-1.6/src/: Makefile.am  Makefile.in  connection.cpp  diagnostic.cpp  environment.cpp  exception.cpp  handle.cpp  object.cpp  odbcpp.cpp  record.cpp  statement.cpp
odbcpp-1.6/tests/: Makefile.am  Makefile.in  connect.cpp  record.cpp  two-tables.cpp
odbcpp-1.6/win32/: Documentation.v8.vcproj  Installer.vc8.vcproj  Makefile.am  Makefile.in  README.txt  odbcpp.nsi  odbcpp.vc8.sln  odbcpp.vc8.vcproj  tst_connect.vc8.vcproj
