#
# File:		Makefile.am
# Object:	The Doxygen files
# Project:	http://www.m2osw.com/odbcpp
# Author:	alexis_wilke@sourceforge.net
#
# Copyright (C)   2008 Made to Order Software Corp.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>
# or <http://gpl3.m2osw.com/>.
#



EXTRA_DIST = odbcpp.doxy.in

# when running Doxygen we will need to run from topdir
# the proper output directory will be defined by the configure script
# destination should be something like this:
#	$(datadir)/doc/$(PACKAGE)-$(PACKAGE_VERSION)
#
#html/index.html: odbcpp.doxy
#	cd $(top_srcdir) && doxygen doc/odbcpp.doxy


# vim: ts=8 sw=8
