#
# File:		include/Makefile.am
# Object:	The header files we want to have as part of the project
# Project:	http://www.m2osw.com/odbcpp
# Author:	alexis_wilke@sourceforge.net
#
# Copyright (C)   2008 Made to Order Software Corp.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>
# or <http://gpl3.m2osw.com/>.
#

nobase_include_HEADERS = \
	odbcpp/connection.h         \
	odbcpp/diagnostic.h         \
	odbcpp/environment.h        \
	odbcpp/exception.h          \
	odbcpp/handle.h             \
	odbcpp/object.h             \
	odbcpp/odbcpp.h             \
	odbcpp/odbcpp_config.h      \
	odbcpp/record.h             \
	odbcpp/statement.h

